Project quan_ly_san_xuat {
  database_type: 'PostgreSQL'
  Note: 'Bản xem trước database theo schema hiện tại.'
}

Enum client_type {
  INDIVIDUAL
  COMPANY
}

Enum order_status {
  pending_approval
  approved
  rejected
  cancelled
}

Enum order_file_type {
  order_pdf
  import_excel
}

Enum work_order_status {
  pending_lsx
  lsx_created
}

Enum product_item_type {
  fg
  wip
  rm
  consumable
}

Enum product_status {
  active
  inactive
  locked
}

Enum production_job_status {
  waiting
  processing
  waiting_qc
  waiting_delivery
  completed
}

Enum job_operation_status {
  waiting
  processing
  done
  blocked
}

Enum outside_processing_order_status {
  draft
  sent
  waiting_qc
  partial_received
  completed
}

Enum purchase_requisition_status {
  draft
  pending
  approved
  rejected
  cancelled
}

Table clients {
  id uuid [pk]
  code varchar(50) [not null]
  full_name varchar(255) [not null]
  email varchar(255)
  phone_number varchar(30)
  client_type client_type [not null]
  tax_code varchar(50)
  company_name varchar(255)
  address text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table suppliers {
  id uuid [pk]
  code varchar(50) [not null]
  name varchar(255) [not null]
  email varchar(255)
  phone_number varchar(30)
  address text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table users {
  id uuid [pk]
  email varchar(255) [not null]
  password varchar(255) [not null]
  full_name varchar(255)
  role_id uuid
  status varchar [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table units {
  id uuid [pk]
  code varchar(50) [not null]
  name varchar(255) [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table products {
  id uuid [pk]
  code varchar(50) [not null, note: 'Mã SP / mã VT / part ID']
  name varchar(255) [not null]
  item_type product_item_type [not null]
  unit_id uuid [not null, ref: > units.id]
  image_url text
  status product_status [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table product_types {
  id uuid [pk]
  code varchar(50) [not null]
  name varchar(255) [not null]
  description text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table product_revisions {
  id uuid [pk]
  product_id uuid [not null, ref: > products.id]
  revision_no varchar(50) [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Lưu phiên bản sản phẩm dùng cho BOM và routing. Job sản xuất đã tạo vẫn giữ revision cũ khi có revision mới.'
}

Table product_files {
  id uuid [pk]
  product_id uuid [not null, ref: > products.id]
  original_name varchar(255) [not null]
  file_name varchar(255) [not null]
  mime_type varchar(100)
  file_size integer
  file_path text [not null]
  uploaded_by uuid [ref: > users.id]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table bom_lines {
  id uuid [pk]
  product_revision_id uuid [not null, ref: > product_revisions.id]
  parent_item_id uuid [not null, ref: > products.id, note: 'products 1-n bom_lines as parent_item']
  child_item_id uuid [not null, ref: > products.id, note: 'products 1-n bom_lines as child_item']
  qty numeric(18,3) [not null]
  unit_id uuid [not null, ref: > units.id]
  scrap_rate numeric(8,4) [not null]
  level integer [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table operations {
  id uuid [pk]
  code varchar(50) [not null]
  name varchar(255) [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table routing_steps {
  id uuid [pk]
  product_revision_id uuid [not null, ref: > product_revisions.id]
  item_id uuid [not null, ref: > products.id]
  operation_id uuid [not null, ref: > operations.id]
  step_no integer [not null]
  is_outside_process boolean [not null]
  default_supplier_id uuid [ref: > suppliers.id]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Quy trình sản xuất theo từng revision sản phẩm.'
}

Table orders {
  id uuid [pk]
  client_id uuid [not null, ref: > clients.id]
  code varchar(50) [not null, note: 'Mã PO']
  pr_number varchar(50) [not null]
  due_date date [not null]
  note text
  vat_rate integer [not null]
  sub_total numeric(18,2) [not null]
  vat_amount numeric(18,2) [not null]
  total_after_vat numeric(18,2) [not null]
  status order_status [not null]
  approved_by uuid [ref: > users.id]
  approved_at timestamp
  rejected_by uuid [ref: > users.id]
  rejected_at timestamp
  rejected_reason text
  created_by uuid [ref: > users.id]
  updated_by uuid [ref: > users.id]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table order_items {
  id uuid [pk]
  order_id uuid [not null, ref: > orders.id]
  product_id uuid [not null, ref: > products.id]
  product_code varchar(50) [not null]
  product_name varchar(255) [not null]
  unit varchar(50) [not null]
  quantity numeric(18,3) [not null]
  unit_price numeric(18,2) [not null]
  line_total numeric(18,2) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table order_files {
  id uuid [pk]
  order_id uuid [not null, ref: > orders.id]
  file_type order_file_type [not null]
  original_name varchar(255) [not null]
  file_name varchar(255) [not null]
  mime_type varchar(100)
  file_size integer
  file_path text [not null]
  uploaded_by uuid [ref: > users.id]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table work_orders {
  id uuid [pk]
  order_id uuid [not null, ref: > orders.id]
  status work_order_status [not null]
  note text
  planned_by uuid [ref: > users.id]
  lsx_created_by uuid [ref: > users.id]
  lsx_created_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table work_order_items {
  id uuid [pk]
  work_order_id uuid [not null, ref: > work_orders.id]
  order_item_id uuid [not null, ref: > order_items.id]
  product_id uuid [not null, ref: > products.id]
  po_quantity numeric(18,3) [not null]
  finished_goods_stock numeric(18,3) [not null]
  available_quantity numeric(18,3) [not null]
  suggested_production_quantity numeric(18,3) [not null]
  production_quantity numeric(18,3) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table production_jobs {
  id uuid [pk]
  job_no varchar(50) [not null]
  work_order_id uuid [not null, ref: > work_orders.id, note: 'production_orders 1-n production_jobs']
  order_item_id uuid [not null, ref: > order_items.id]
  product_id uuid [not null, ref: > products.id]
  product_revision_id uuid [not null, ref: > product_revisions.id]
  planned_qty numeric(18,3) [not null]
  ok_qty numeric(18,3) [not null]
  ng_qty numeric(18,3) [not null]
  due_date date [not null]
  status production_job_status [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table job_operations {
  id uuid [pk]
  production_job_id uuid [not null, ref: > production_jobs.id, note: 'production_jobs 1-n job_operations']
  item_id uuid [not null, ref: > products.id]
  operation_id uuid [not null, ref: > operations.id]
  step_no integer [not null]
  plan_qty numeric(18,3) [not null]
  ok_qty numeric(18,3) [not null]
  ng_qty numeric(18,3) [not null]
  status job_operation_status [not null]
  is_outside_process boolean [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Snapshot routing của Job. Không đọc trực tiếp từ routing_steps sau khi Job đã tạo; Job phải giữ routing tại thời điểm sản xuất.'
}

Table outside_processing_orders {
  id uuid [pk]
  code varchar(50) [not null, note: 'Mã PGCN / OS-OUT']
  production_job_id uuid [not null, ref: > production_jobs.id]
  job_operation_id uuid [not null, ref: > job_operations.id]
  item_id uuid [not null, ref: > products.id]
  operation_id uuid [not null, ref: > operations.id]
  supplier_id uuid [not null, ref: > suppliers.id]
  qty_sent numeric(18,3) [not null]
  qty_received numeric(18,3) [not null]
  status outside_processing_order_status [not null]
  sent_date date
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Phiếu gửi gia công ngoài, tương ứng OS-OUT.'
}

Table outside_processing_receipts {
  id uuid [pk]
  outside_processing_order_id uuid [not null, ref: > outside_processing_orders.id, note: 'outside_processing_orders 1-n outside_processing_receipts']
  received_date date [not null]
  qty_received numeric(18,3) [not null]
  need_qc boolean [not null]
  ok_qty numeric(18,3) [not null]
  ng_qty numeric(18,3) [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Phiếu nhận gia công ngoài, tương ứng OS-IN.'
}

Table purchase_requisitions {
  id uuid [pk]
  code varchar(50) [not null, note: 'Mã phiếu ĐX']
  request_date date [not null]
  required_date date [not null]
  requested_by uuid [not null, ref: > users.id]
  department_id uuid
  sales_order_id uuid [ref: > orders.id]
  production_job_id uuid [ref: > production_jobs.id]
  reason text
  status purchase_requisition_status [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp

  Note: 'Phiếu đề xuất mua hàng.'
}

Table purchase_requisition_items {
  id uuid [pk]
  purchase_requisition_id uuid [not null, ref: > purchase_requisitions.id]
  material_id uuid [not null, ref: > products.id]
  bom_qty numeric(18,3) [not null]
  actual_stock_qty numeric(18,3) [not null]
  available_stock_qty numeric(18,3) [not null]
  requested_qty numeric(18,3) [not null]
  note text
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}
